--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 server.error.include-binding-errors=always
+server.port=9090
