--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/onlineschool_db_springboot
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://cosmin-databases.clchrusyhj2f.eu-west-1.rds.amazonaws.com:3306/onlineschool_db_springboot
+spring.datasource.username=admin
+spring.datasource.password=181299420011
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
