--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
             <version>1.0.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.4</version>
+        </dependency>
     </dependencies>
 
     <build>
